<resources>
    <string name="app_name">Stakanchik</string>
    <string name="home">Home</string>
    <string name="popular">Popular</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="no_internet">No Internet Connection!</string>
    <string name="unknown_error">Unknown Error!</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="app_name_rus">Стаканчик</string>
    <string name="user_nickname">user_nickname</string>
    <string name="email">email</string>
    <string name="genre">genre</string>
</resources>